--- a/Readme
+++ b/Readme
@@ -1,2 +1,2 @@
 This is a basic calculator for IPPT test. This test is used to check the physical strength of the candidates. 
-You can also check <a href="https://instandersapk.com/"> instander mod apk new version <a> for the latest information of the instagram app
+You can also check <a href="https://instandersapk.com/"> instander mod apk new version </a> for the latest information of the instagram app
