--- a/Readme
+++ b/Readme
@@ -1,2 +1,4 @@
 This is a basic calculator for IPPT test. This test is used to check the physical strength of the candidates. 
-You can also check [instander mod apk new version][1] for the latest information of the instagram app
+You can also check [instander mod apk new version][1]
+[1]: https://instandersapk.com/ "instander mod apk new version" 
+for the latest information of the instagram app
